--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
 		--popover-foreground: 240 10% 3.9%;
 		--primary: 169.67 100% 23.92%;
 		--primary-foreground: 0 0% 98%;
-		--secondary: 240 4.8% 95.9%;
+		--secondary: 264 16% 53%;
 		--secondary-foreground: 240 5.9% 10%;
 		--muted: 240 4.8% 95.9%;
 		--muted-foreground: 240 3.8% 46.1%;
@@ -54,6 +54,6 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-background text-foreground;
+		@apply bg-background text-foreground bg-grey-bg3 font-normal text-14;
 	}
 }
