feat(ui): updated more changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,7 +107,7 @@
 	}
 }
 
-.popoverContent {
+.popover-content {
 	width: var(--radix-popover-trigger-width);
 	max-height: var(--radix-popover-content-available-height);
 }
