--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,3 +127,28 @@
 .secondary-bg {
 	@apply bg-secondary text-secondary-foreground;
 }
+
+/* start scrollbar */
+.scrollbar-custom::-webkit-scrollbar {
+	width: 4px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+	background-color: #888;
+	border-radius: 4px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
+/* Firefox support */
+.scrollbar-custom {
+	scrollbar-width: thin;
+	scrollbar-color: #f1f1f1 #f1f1f1;
+}
+/* start scrollbar */
